--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "angular-datatables": "^12.0.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-bs4": "^1.10.20",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "rxjs": "~6.6.0",
@@ -33,6 +36,7 @@
     "@angular-devkit/build-angular": "~12.0.2",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^12.11.1",
