--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.2",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
