--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "angular-datatables": "^12.0.0",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
+    "datatables.net-buttons-dt": "^2.0.0",
+    "datatables.net-dt": "^1.11.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "rxjs": "~6.6.0",
