--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "angular-datatables": "^12.0.0",
-    "datatables.net": "^1.10.20",
+    "bootstrap": "^5.1.1",
+    "datatables.net": "^1.11.2",
     "datatables.net-bs4": "^1.10.20",
+    "datatables.net-buttons": "^2.0.0",
     "datatables.net-buttons-dt": "^2.0.0",
     "datatables.net-dt": "^1.11.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
+    "jszip": "^3.7.1",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.2",
     "tslib": "^2.1.0",
@@ -39,9 +43,10 @@
     "@angular-devkit/build-angular": "~12.0.2",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
-    "@types/datatables.net": "^1.10.18",
+    "@types/datatables.net": "^1.10.21",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.5",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
