--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "datatables.net-dt": "^1.11.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
+    "jspdf": "^2.4.0",
     "jszip": "^3.7.1",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
