--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,11 +30,14 @@
     "datatables.net-buttons": "^2.0.0",
     "datatables.net-buttons-dt": "^2.0.0",
     "datatables.net-dt": "^1.11.2",
+    "exceljs": "^1.12.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
     "jspdf": "^2.4.0",
     "jszip": "^3.7.1",
     "ngx-bootstrap": "^7.1.0",
+    "ngx-csv": "^0.3.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.2",
     "tslib": "^2.1.0",
